added strings to intl

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5,5 +5,31 @@
 
     "addMealTooltip": "Add meal to diary",
     "diaryBottomNavigationBarLabel": "Diary List",
-    "calendarBottomNavigationBarLabel": "Calendar"
+    "calendarBottomNavigationBarLabel": "Calendar",
+
+    "diaryEntryUpdate": "Update",
+    "diaryEntryDelete": "Delete",
+
+    "diaryFormAdd": "Add",
+    "diaryFormUpdate": "Update",
+    "diaryFormCancel": "Cancel",
+
+
+    "foodAmountSmall": "Small",
+    "foodAmountMedium": "Medium",
+    "foodAmountHigh": "High",
+
+    "symptomIntensityLow": "Low",
+    "symptomIntensityMedium": "Medium",
+    "symptomIntensityHigh": "High",
+
+
+    "stoolType1": "Type 1",
+    "stoolType2": "Type 2",
+    "stoolType3": "Type 3",
+    "stoolType4": "Type 4",
+    "stoolType5": "Type 5",
+    "stoolType6": "Type 6",
+    "stoolType7": "Type 7"
+    
 }
